--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -3,5 +3,6 @@
     "header-nav-tournaments": "tournaments",
     "header-nav-games": "games",
     "wallet-connect": "connect wallet",
+    "signup-login": "sign up / log in ",
     "user-load-error": "failed to load the user profile"
 }
