--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -1,6 +1,7 @@
 {
     "header-nav-home": "home",
     "header-nav-tournaments": "tournaments",
+    "join-now": "join now",
     "header-nav-games": "games",
     "wallet-connect": "connect wallet",
     "signup-login": "sign up / log in ",
